[package]
name = "tuple"
version = "0.4.2"
authors = ["Sebastian Köln <sebk@rynx.org>"]
description = "Element-wise operations on tuples"
documentation = "https://docs.rs/tuple"
homepage = "https://gitlab.com/sebk/tuple.git"
repository = "https://gitlab.com/sebk/tuple.git"
keywords = ["tuple", "science"]
license = "MIT"

[features]
default = ["impl_num", "impl_serde"]
impl_num = ["num-traits"]
impl_simd = ["nightly", "simd"]
impl_serde = ["serde"]
nightly = []

[dependencies]
num-traits = { version = "0.1", optional=true }
serde = { version = "1.0", optional=true }
simd = { version = "0.2", optional=true }
