[package]
name = "tuple"
version = "0.4.3"
authors = ["Sebastian Köln <sebk@rynx.org>"]
description = "Element-wise operations on tuples"
documentation = "https://docs.rs/tuple"
homepage = "https://github.com/s3bk/tuple.git"
repository = "https://github.com/s3bk/tuple.git"
keywords = ["tuple", "science"]
license = "MIT"

[features]
default = ["impl_num", "impl_serde"]
impl_num = ["num-traits"]
impl_simd = ["nightly", "packed_simd"]
impl_serde = ["serde"]
nightly = []

[dependencies]
num-traits = { version = "0.1", optional=true }
serde = { version = "1.0", optional=true }
packed_simd = { version = "0.3", optional=true }
